- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.8.0
 
Functions QBluetoothLocalDevicePrivate::RequestPinCode() and QBluetoothLocalDevicePrivate::RequestPasskey() are not using proper way to generate random codes.
This affects the Bluez4 backend only as there is no support for this feature in Bluez5 (QTBUG-38401)
| For Gerrit Dashboard: QTBUG-59392 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 188339,2 | Ensure the passkey and pincode for pairing are random | 5.9 | qt/qtconnectivity | Status: MERGED | +2 | 0 |