Ensure the passkey and pincode for pairing are random

The previous AND operation with 1mio was not random (especially when
the hex value was used).

Task-number: QTBUG-59392
Change-Id: Id9ba5432c21fa41a9e5af9800a8633ce4f02fba4
Reviewed-by: Tuomas Vaarala <tuomas.vaarala@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>